--- a/template.yaml
+++ b/template.yaml
@@ -70,6 +70,23 @@ Resources:
                 - !GetAtt DeviceCacherFunctionRole.Arn
                 - !GetAtt DoorNotificationHandlerRole.Arn
 
+  DoorbellHandler:
+    Type: AWS::Serverless::Function
+    Properties:
+      PackageType: Image
+      Events:
+        EmailNotificationSource:
+          Type: SNS
+          Properties:
+            # FilterPolicy: SnsFilterPolicy
+            Region: us-east-1
+            SqsSubscription: false
+            Topic: arn:aws:sns:us-east-1:297473205123:adt-email-notifications
+    Metadata:
+      Dockerfile: Dockerfile
+      DockerContext: ./doorbell_integrations
+      DockerTag: python3.8-v1
+
 Outputs:
   DoorNotificationHandler:
     Description: "DoorNotificationHandler Function ARN"
@@ -77,9 +94,15 @@ Outputs:
   DeviceCacherFunction:
     Description: "DeviceCacherFunction Function ARN"
     Value: !GetAtt DeviceCacherFunction.Arn
+  DoorNotificationHandler:
+    Description: "DoorbellHandler Function ARN"
+    Value: !GetAtt DoorbellHandler.Arn
   DoorNotificationHandlerIamRole:
     Description: "Implicit IAM Role created for RefreshDeviceCacheEventHandler function"
     Value: !GetAtt DoorNotificationHandlerRole.Arn
   DeviceCacherFunctionIamRole:
     Description: "Implicit IAM Role created for DeviceCacherFunction function"
     Value: !GetAtt DeviceCacherFunctionRole.Arn
+  DeviceCacherFunctionIamRole:
+    Description: "Implicit IAM Role created for DoorbellHandler function"
+    Value: !GetAtt DoorbellHandlerRole.Arn
